@@ -2,6 +2,14 @@
 
 	Merged from trunk:
 
+	* plug-ins/script-fu/tinyscheme/scheme.c (get_consecutive_cells):
+	Fix to prevent reporting out of memory when there should be plenty
+	of cells still available. See SourceForge bug #1794369.
+
+2007-12-11  Kevin Cozens  <kcozens@cvs.gnome.org>
+
+	Merged from trunk:
+
 	* plug-ins/script-fu/tinyscheme/scheme.c: Applied changes from
 	official version of TinyScheme which fix is_integer(). See
 	SourceForge bug #1593861.
